--- a/projeto-pratico/index.html
+++ b/projeto-pratico/index.html
@@ -53,6 +53,42 @@
         </div>
     </nav>
 
+    <div class="divslider">
+        <div class="container">
+            <div class="col-xs-12">
+                <div id="sliderprincipal" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li class="active" data-target="#sliderprincipal" data-slide-to="0"></li>
+                        <li data-target="#sliderprincipal" data-slide-to="1"></li>
+                        <li data-target="#sliderprincipal" data-slide-to="2"></li>
+                    </ol>
+
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="imgs/slider/slider1.jpg" alt="Imagem Slider 1">
+                        </div>
+                        <div class="item">
+                            <img src="imgs/slider/slider2.jpg" alt="Imagem Slider 2">
+                        </div>
+                        <div class="item">
+                            <img src="imgs/slider/slider3.jpg" alt="Imagem Slider 3">
+                        </div>
+                    </div>
+
+                    <a class="left carousel-control" href="#sliderprincipal" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Anterior</span>
+                    </a>
+
+                    <a class="right carousel-control" href="#sliderprincipal" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Próximo</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="servicos">
         <h1>Serviços</h1>
     </div>
