--- a/projeto-pratico/index.html
+++ b/projeto-pratico/index.html
@@ -16,7 +16,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body data-spy="scroll" data-target=".menu-navegacao" data-offset="80">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -30,7 +30,7 @@
                 </a>
             </div>
 
-            <div id="menu-navegacao" class="collapse navbar-collapse">
+            <div id="menu-navegacao" class="collapse navbar-collapse menu-navegacao">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#page-top"></a></li>
                     <li>
@@ -89,31 +89,62 @@
         </div>
     </div>
 
-    <div id="servicos">
-        <h1>Serviços</h1>
-    </div>
+    <section id="servicos">
+        <div class="container">
+            <div class="col-xs-12">
+                <div class="page-header">
+                    <h1>Serviços <small>Conheça o que fazemos</small></h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <div id="portfolio">
-        <h1>Portfólio</h1>
-    </div>
+    <section id="portfolio" class="div_colorida">
+        <div class="container">
+            <div class="col-xs-12">
+                <div class="page-header">
+                    <h1>Portfólio <small>Conheça nossos trabalhos</small></h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <div id="quem-somos">
-        <h1>Quem Somos</h1>
-    </div>
+    <section id="quem-somos">
+        <div class="container">
+            <div class="col-xs-12">
+                <div class="page-header">
+                    <h1>Quem Somos <small>Conheça nossa história</small></h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <div id="localizacao">
-        <h1>Localização</h1>
-    </div>
+    <section id="localizacao" class="div_colorida">
+        <div class="container">
+            <div class="col-xs-12">
+                <div class="page-header">
+                    <h1>Localização <small>Veja onde estamos</small></h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <div id="contato">
-        <h1>Contato</h1>
-    </div>
+    <section id="contato">
+        <div class="container">
+            <div class="col-xs-12">
+                <div class="page-header">
+                    <h1>Contato <small>Fale conosco agora mesmo</small></h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         Rodapé da página
     </footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
