--- a/projeto-pratico/index.html
+++ b/projeto-pratico/index.html
@@ -91,9 +91,36 @@
 
     <section id="servicos">
         <div class="container">
-            <div class="col-xs-12">
-                <div class="page-header">
-                    <h1>Serviços <small>Conheça o que fazemos</small></h1>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="page-header">
+                        <h1>Serviços <small>Conheça o que fazemos</small></h1>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 servicos_item">
+                    <div><img src="imgs/foto.jpg" class="img-responsive img-circle"></div>
+                    <h4>E-commerce</h4>
+                    <p>Descrição do serviço apresentado. Texto texto texto texto texto.</p>
+                </div>
+                <div class="col-md-4 servicos_item">
+                    <div><img src="imgs/foto.jpg" class="img-responsive img-circle"></div>
+                    <h4>Desenvolvimento de Sites</h4>
+                    <p>Descrição do serviço apresentado. Texto texto texto texto texto.</p>
+                </div>
+                <div class="col-md-4 servicos_item">
+                    <div><img src="imgs/foto.jpg" class="img-responsive img-circle"></div>
+                    <h4>Criação de Layout</h4>
+                    <p>Descrição do serviço apresentado. Texto texto texto texto texto.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <a href="#" class="btn btn-default btn-lg btn-todos-servicos">Clique aqui para ver todos os serviços</a>
                 </div>
             </div>
         </div>
