--- a/projeto-pratico/index.html
+++ b/projeto-pratico/index.html
@@ -128,10 +128,58 @@
 
     <section id="portfolio" class="div_colorida">
         <div class="container">
-            <div class="col-xs-12">
-                <div class="page-header">
-                    <h1>Portfólio <small>Conheça nossos trabalhos</small></h1>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="page-header">
+                        <h1>Portfólio <small>Conheça nossos trabalhos</small></h1>
+                    </div>
                 </div>
+            </div>
+
+            <div class="row portfolio-row">
+                <div class="col-sm-4">
+                    <div class="portfolio-item">
+                        <div><img src="imgs/foto2.jpg" class="img-responsive"></div>
+                        <h4>Nome do Cliente</h4>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="portfolio-item">
+                        <div><img src="imgs/foto2.jpg" class="img-responsive"></div>
+                        <h4>Nome do Cliente</h4>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="portfolio-item">
+                        <div><img src="imgs/foto2.jpg" class="img-responsive"></div>
+                        <h4>Nome do Cliente</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row portfolio-row">
+                <div class="col-sm-4">
+                    <div class="portfolio-item">
+                        <div><img src="imgs/foto3.jpg" class="img-responsive grayscale"></div>
+                        <h4>Nome do Cliente</h4>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="portfolio-item">
+                        <div><img src="imgs/foto3.jpg" class="img-responsive grayscale"></div>
+                        <h4>Nome do Cliente</h4>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="portfolio-item">
+                        <div><img src="imgs/foto3.jpg" class="img-responsive grayscale"></div>
+                        <h4>Nome do Cliente</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-12 text-center">
+                <a href="#" class="btn btn-default btn-lg">Clique aqui para conhecer todos os nossos clientes</a>
             </div>
         </div>
     </section>
