--- a/projeto-pratico/index.html
+++ b/projeto-pratico/index.html
@@ -186,9 +186,71 @@
 
     <section id="quem-somos">
         <div class="container">
-            <div class="col-xs-12">
-                <div class="page-header">
-                    <h1>Quem Somos <small>Conheça nossa história</small></h1>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="page-header">
+                        <h1>Quem Somos <small>Conheça nossa história</small></h1>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="col-sm-8 text-right">
+                        <h4>Texto sobre a empresa</h4>
+                        <p>Texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
+                            texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
+                            texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="imgs/foto.jpg" class="img-responsive img-circle">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="col-sm-4">
+                        <img src="imgs/foto.jpg" class="img-responsive img-circle">
+                    </div>
+                    <div class="col-sm-8">
+                        <h4>Missão da empresa</h4>
+                        <p>Texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
+                            texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
+                            texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="page-header">
+                        <h1>Nossa Equipe <small>Conheça nossos colaboradores</small></h1>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-3">
+                    <div>
+                        <div><img src="imgs/foto3.jpg" class="img-responsive grayscale"></div>
+                        <h4>Nome do funcionário</h4>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div>
+                        <div><img src="imgs/foto3.jpg" class="img-responsive grayscale"></div>
+                        <h4>Nome do funcionário</h4>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div>
+                        <div><img src="imgs/foto3.jpg" class="img-responsive grayscale"></div>
+                        <h4>Nome do funcionário</h4>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div>
+                        <div><img src="imgs/foto3.jpg" class="img-responsive grayscale"></div>
+                        <h4>Nome do funcionário</h4>
+                    </div>
                 </div>
             </div>
         </div>
@@ -196,9 +258,17 @@
 
     <section id="localizacao" class="div_colorida">
         <div class="container">
-            <div class="col-xs-12">
-                <div class="page-header">
-                    <h1>Localização <small>Veja onde estamos</small></h1>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="page-header">
+                        <h1>Localização <small>Veja onde estamos</small></h1>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d239207.29269456177!2d-54.7759650121!3d-20.481043389993175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9486e6726b2b9f27%3A0xf5a8469ebc84d2c1!2sCampo+Grande%2C+MS!5e0!3m2!1spt-BR!2sbr!4v1490918149350" width="100%" height="520" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
