--- a/projeto-pratico/index.html
+++ b/projeto-pratico/index.html
@@ -178,8 +178,10 @@
                 </div>
             </div>
 
-            <div class="col-xs-12 text-center">
-                <a href="#" class="btn btn-default btn-lg">Clique aqui para conhecer todos os nossos clientes</a>
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <a href="portfolio.html" class="btn btn-default btn-lg">Clique aqui para conhecer <br> todos os nossos clientes</a>
+                </div>
             </div>
         </div>
     </section>
@@ -253,6 +255,11 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <a href="quem-somos.html" class="btn btn-default btn-lg">Clique aqui para conhecer <br> melhor a empresa</a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -276,16 +283,67 @@
 
     <section id="contato">
         <div class="container">
-            <div class="col-xs-12">
-                <div class="page-header">
-                    <h1>Contato <small>Fale conosco agora mesmo</small></h1>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="page-header">
+                        <h1>Contato <small>Fale conosco agora mesmo</small></h1>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <p class="bg-success">Preencha o formulário abaixo para entrar em contato conosco</p>
+                </div>
+            </div>
+
+            <div class="row contato">
+                <div class="col-xs-12">
+                    <form name="formContato" id="formContato">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control input-lg" placeholder="Qual seu nome? *" required />
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="email" class="form-control input-lg" placeholder="Qual seu email? *" required>
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="tel" class="form-control input-lg" placeholder="Seu telefone?" />
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <textarea class="form-control input-lg" placeholder="Sua mensagem: *" required></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6 text-right">
+                                <div class="alert alert-success">Envio realizado!</div>
+                            </div>
+                            <div class="col-sm-6">
+                                <button type="submit" class="btn btn-success btn-lg">Enviar Formulário</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
 
     <footer>
-        Rodapé da página
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-10">
+                    Informações gerais sobre a empresa, endereço, email e etc.
+                </div>
+                <div class="col-sm-2 text-right">
+                    <small>Desenvolvido por:</small><br/>
+                    <strong>Devmedia.com</strong>
+                </div>
+            </div>
+        </div>
     </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
