--- a/projeto-pratico/painel.html
+++ b/projeto-pratico/painel.html
@@ -54,10 +54,47 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="col-sm-3">
-                coluna 1
-            </div>
-            <div class="col-sm-9 text-right">
-                coluna 2
+                <div class="panel panel-primary">
+                    <div id="colGroup1" role="tab" class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#colListGroup1" aria-controls="colListGroup1" aria-expanded="true" data-toggle="collapse">
+                                <span class="glyphicon glyphicon-file"></span>
+                                Gerenciar Posts
+                            </a>
+                        </h4>
+                    </div>
+
+                    <div role="tabpanel" class="panel-collapse collapse in" id="colListGroup1" aria-expanded="true">
+                        <ul class="list-group">
+                            <li class="list-group-item"><a href="#">Criar novo POST</a></li>
+                            <li class="list-group-item"><a href="#">Alterar POSTS</a></li>
+                            <li class="list-group-item"><a href="#">Exluir POSTS</a></li>
+                        </ul>
+
+                        <div class="panel-footer"></div>
+                    </div>
+                </div>
+
+                <div class="panel panel-primary">
+                    <div id="colGroup2" role="tab" class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#colListGroup2" aria-controls="colListGroup2" aria-expanded="true" data-toggle="collapse">
+                                <span class="glyphicon glyphicon-user"></span>
+                                Gerenciar Usuários
+                            </a>
+                        </h4>
+                    </div>
+
+                    <div role="tabpanel" class="panel-collapse collapse in" id="colListGroup2" aria-expanded="true">
+                        <ul class="list-group">
+                            <li class="list-group-item"><a href="#">Criar novo usuarío</a></li>
+                            <li class="list-group-item"><a href="#">Alterar usuário</a></li>
+                            <li class="list-group-item"><a href="#">Exluir usuário</a></li>
+                        </ul>
+
+                        <div class="panel-footer"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
