--- a/projeto-pratico/painel.html
+++ b/projeto-pratico/painel.html
@@ -96,6 +96,73 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-sm-9">
+                <div class="conteudo-painel">
+                    <div class="conteudo-painel-int">
+                        <ul class="nav nav-pills" role="tablist">
+                            <li class="active"><a href="#">E-mails <span class="badge">10</span></a></li>
+                            <li class=""><a href="#">Avisos <span class="badge">10</span></a></li>
+                            <li class=""><a href="#">Mensagens <span class="badge">10</span></a></li>
+                            <li class=""><a href="#">Aniversariantes <span class="badge">10</span></a></li>
+                        </ul>
+
+                        <hr />
+
+                        <div class="well well-sm">
+                            <h2>Seja bem-vindo Usuário:</h2>
+                            <p>Utilize o menu ao lado para acessar as áreas do painel</p>
+                        </div>
+
+                        <div class="page-header">
+                            <h3>Avisos:</h3>
+                        </div>
+
+                        <div class="alert alert-success">
+                            <strong>Parabéns!</strong> Você foi recomendado!
+                        </div>
+
+                        <div class="alert alert-warning">
+                            <strong>Atenção:</strong> Você tem até o dia 01/01/1111 para ajustar suas férias!
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <h3>Minhas Tarefas</h3>
+                                <ul>
+                                    <li>Ligar para Fulano</li>
+                                    <li>Retornar e-mail Ciclano</li>
+                                    <li>Outra Tarefa</li>
+                                </ul>
+
+                                <a href="#" class="btn btn-primary btn-block">Adicionar nova Tarefa</a>
+                            </div>
+
+                            <div class="col-sm-4">
+                                <h3>Minhas Tarefas</h3>
+                                <ul>
+                                    <li>Ligar para Fulano</li>
+                                    <li>Retornar e-mail Ciclano</li>
+                                    <li>Outra Tarefa</li>
+                                </ul>
+
+                                <a href="#" class="btn btn-primary btn-block">Adicionar nova Tarefa</a>
+                            </div>
+
+                            <div class="col-sm-4">
+                                <h3>Minhas Tarefas</h3>
+                                <ul>
+                                    <li>Ligar para Fulano</li>
+                                    <li>Retornar e-mail Ciclano</li>
+                                    <li>Outra Tarefa</li>
+                                </ul>
+
+                                <a href="#" class="btn btn-primary btn-block">Adicionar nova Tarefa</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
